# Qcm

./: .clangd  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  flaptak-source.json  flaptak-sources.json  make_android.sh
app/: CMakeLists.txt  main.cpp  main.qml  static.cpp.in  test.qml
app/android/: AndroidManifest.xml  build.gradle
app/assets/: Qcm.desktop  Qcm.desktop.in  Qcm.metainfo.xml  Qcm.metainfo.xml.in  Qcm.releases.xml
app/include/Qcm/: action.hpp  api.h  app.h  app.hpp  backend.h  backend.hpp  backend_msg.h  backend_msg.hpp  cache_sql.h  clipboard.h  collection_sql.h  color.h  enum.h  global.hpp  global_p.hpp  image_provider.h  image_response.h  info.h  item_id.h  lyric.h  macro.hpp  macro_qt.hpp  model.h  ncm_image.h  notifier.hpp  path.h  play_queue.h  play_queue_view.h  player.h  player.hpp  playlist.h  qml_util.h  qr_image.h  qt.hpp  storage_info.h  store.hpp  type.h
app/include/qcm_interface/: action.h  api.h  async.h  async.inl  client.h  duration.h  enum.h  ex.h  export.h  global.h  global_p.h  global_static.h  item_id.h  meta_name.h  model.h  notifier.h  path.h  query_builder.h
app/qml/: Drawer.qml  DrawerContent.qml  Global.qml  PaneBar.qml  PlayBar.qml  PlayBarFlickable.qml  QA.qml  Theme.qml  Util.qml  Window.qml  test.qml
app/qml/action/: AddToMixAction.qml  AppendListAction.qml  CollectAction.qml  ColorSchemeAction.qml  CommentAction.qml  CopyAction.qml  FavoriteAction.qml  FilterAction.qml  GoToAlbumAction.qml  GoToArtistAction.qml  MixCreateAction.qml  MixDeleteAction.qml  MixLinkAction.qml  PlayAction.qml  PlayAllAction.qml  PlayNextAction.qml  PlaynextAction.qml  SelectDisplayModeAction.qml  SettingAction.qml  ShuffleAllAction.qml  SubAction.qml  SyncItemAction.qml
app/qml/component/: ArtistsPopup.qml  AuthEmail.qml  AuthQr.qml  AuthUsername.qml  DebugRect.qml  GridView.qml  IconRowLayout.qml  Image.qml  InfoRow.qml  Leaflet.qml  ListDescription.qml  ListenIcon.qml  LyricView.qml  MButton.qml  MFlickable.qml  MGridView.qml  MItemDelegate.qml  MListView.qml  MMenu.qml  MMenuItem.qml  MPage.qml  MPane.qml  MPopup.qml  MRoundButton.qml  MainBasePage.qml  Mpris.qml  OrderChip.qml  PageContainer.qml  PagePopup.qml  PageStack.qml  PicGridDelegate.qml  PlaySlider.qml  PlaylistListView.qml  ProgramMenu.qml  RoundImage.qml  SettingRow.qml  SettingSection.qml  SnakeBar.qml  SnakeView.qml  SongDelegate.qml  (+3 more)
app/qml/delegate/: AlbumCardDelegate.qml  ArtistCardDelegate.qml  CommentDelegate.qml  ListItemDelegate.qml  PicCardDelegate.qml  PicCardGridDelegate.qml  PicGridDelegate.qml  ProgramDelegate.qml  SongDelegate.qml
app/qml/dialog/: AddToMixDialog.qml  AlbumFilterDialog.qml  (+5 more)
app/src/: action.cpp  action.cppm  api.cpp  app.cpp  app.cppm  backend.cpp  backend.cppm  cache_sql.cpp  clipboard.cpp  collection_sql.cpp  color.cpp  convert.cpp  enum.cpp  fake_moc.cpp  global.cpp  global.cppm  image_provider.cpp  lyric.cpp  main.cpp  mod.cpp  mod.cppm  model.cpp  ncm_image.cpp  notifier.cpp  notifier.cppm  path.cpp  play_queue.cpp  play_queue_old_  player.cpp  player.cppm  playlist.cpp  qml_register.cpp  qml_util.cpp  qr_image.cpp  qt.cppm  query.cpp  storage_info.cpp  store.cpp
asio_helper/: CMakeLists.txt  asio.cpp
asio_qt/: CMakeLists.txt  qt_execution_context.cpp
core/: CMakeLists.txt  log.cpp
core/src/: container_helper.cppm  core.cppm  error.cppm  fmt.cppm  lambda.cppm  log.cpp  log.cppm  mem.cpp  mem.cppm  mod.cppm  path.cpp  random.cppm  str_helper.cppm  type_list.cppm
crypto/: CMakeLists.txt  crypto.cpp
generator/model/: CMakeLists.txt  generator.cpp  log.cpp  peg_cpp.hpp
json_helper/: CMakeLists.txt  helper.cpp
material_helper/: CMakeLists.txt  helper.cpp
media_cache/: CMakeLists.txt  connection.cpp  connection.h  get_request.cpp  get_request.h  media_cache.cpp  server.cpp
message/: CMakeLists.txt
message/cmake/: qml_hook.cmake
message/proto/: filter.proto  message.proto  model.proto
message/src/: item_id.cpp
meta_model/: .gitignore  CMakeLists.txt  moc.cpp  qmetaobjectmodel.cpp
meta_model/doc/: Doxyfile
meta_model/src/: moc.cpp  qmetaobjectmodel.cpp
mpris/: CMakeLists.txt  mediaplayer2.cpp  mediaplayer2_adaptor.cpp  mpris.cpp
player/: CMakeLists.txt  audio_decoder.h  audio_device.h  audio_frame.h  audio_frame_queue.h  audio_stream_params.h  context.h  ffmpeg_dict.h  ffmpeg_error.h  ffmpeg_format_context.h  ffmpeg_frame.h  packet_queue.h  player.cpp  resampler.h  stream_reader.h
qcm_interface/: CMakeLists.txt  action.cpp  api.cpp  duration.cpp  enum.cpp  generator.cpp  global.cpp  global_static.cpp  item_id.cpp  meta_name.cpp  mod.cppm  model.cpp  notifier.cpp  oper.cpp  path.cpp  peg_cpp.hpp  plugin.cpp  query.cpp  router.cpp  state.cpp  sync_api.cpp
qcm_interface/model/: id_queue.cpp  plugin.cpp  user_model.cpp
qml_material/: CMakeLists.txt  icon.cpp  theme.cpp  util.cpp
qml_material/qml/: Button.qml  Card.qml  CircularIndicator.qml  ComboBox.qml  Control.qml  Dialog.qml  Divider.qml  Drawer.qml  DrawerItem.qml  FAB.qml  Flickable.qml  FontMetrics.qml  GridView.qml  Icon.qml  IconButton.qml  IconLabel.qml  Image.qml  Label.qml  ListItem.qml  ListView.qml  Menu.qml  MenuItem.qml  Page.qml  Pane.qml  Rail.qml  ScrollBar.qml  SearchBar.qml  Slider.qml  SplitView.qml  StackView.qml  Switch.qml  TabBar.qml  TabButton.qml  Text.qml  TextField.qml  TextInput.qml  Token.qml
qml_material/src/: color.cpp  corner.cpp  helper.cpp  image.cpp  input_block.cpp  item_holder.cpp  round_item.cpp  theme.cpp  type.cpp  util.cpp
qt/: CMakeLists.txt
qt/src/: helper.cppm  kstore.cppm  mod.cppm  qobject_bindable_property_p.cppm  qt.cppm
request/: CMakeLists.txt  connection.h  curl_easy.cpp  curl_easy.h  curl_error.h  curl_multi.cpp  curl_multi.h  curl_slist.h  peg.cpp  request.cpp  request_p.h  response.cpp  session.cpp  session_share.cpp  type.cpp  uri.cpp
request/peg/: http.h  uri.h
service/ncm/: CMakeLists.txt  client.cpp  crypto.cpp  dump.cpp  dump.h  model.cpp
test/: CMakeLists.txt
test/src/: asio.cpp  log.cpp  main.cpp
(+742 files in other folders)
